# roboclaw-rs

./: Cargo.toml  README.md
.github/workflows/: pages.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/ros2/: Cargo.toml
crates/ros2/src/: lib.rs
crates/sim/: Cargo.toml
crates/skills/: Cargo.toml
crates/tools/: Cargo.toml
docs/: decisions.md  demo_video.md  experiments.md  interfaces.md
examples/: compare_planners.rs  pick_and_place.rs  planner_experiments.rs
experiments/artifact_mirroring_drift/: cases.json  docs_portal_preferred.rs  latest_mirror_majority.rs  mirror_budget.rs  mod.rs  registry_only.rs
experiments/artifact_trust_decay/: cases.json  latest_train_only.rs  mod.rs  per_train_majority.rs  static_source_priority.rs  trust_decay_budget.rs
experiments/backend_observation_fusion/: backend_authoritative.rs  cases.json  confidence_weighted.rs  failure_aware_merge.rs  mod.rs  sensor_first.rs
experiments/cross_provider_validation/: cases.json  claude_provider.rs  local_provider.rs  mock_provider.rs  mod.rs  openai_provider.rs
experiments/cross_repo_provenance_stitching/: cases.json  docs_repo_preferred.rs  mod.rs  runtime_repo_only.rs  stitching_budget.rs  tag_join.rs
experiments/cross_suite_contradiction/: cases.json  evidence_graph.rs  frontier_membership_only.rs  mod.rs  promotion_kind_only.rs  risk_signal_gate.rs
experiments/cross_train_lag_carryover/: adjacent_pending_reuse.rs  carryover_budget.rs  cases.json  latest_train_only.rs  mod.rs  surface_chain_vote.rs
experiments/frontier_snapshot_replay/: cases.json  latest_snapshot_only.rs  mod.rs  provider_majority.rs  strict_consensus_gate.rs  weighted_stability.rs
experiments/gateway_replanning/: cases.json  current_gateway_clone.rs  direct_resume_first.rs  fail_fast.rs  mod.rs  resume_aware_replan.rs
experiments/planner_prompt_shaping/: cases.json  catalog_freeform.rs  mirrored_constraints.rs  mod.rs  prompt_constrained.rs  schema_constrained.rs
experiments/planner_selection/: cases.json  catalog_score.rs  current_heuristic_clone.rs  keyword_rules.rs  mod.rs  pipeline_router.rs
experiments/promotion_environment_provenance/: cases.json  critical_environment_gate.rs  documented_majority.rs  environment_lineage_budget.rs  latest_environment_only.rs  mod.rs
prompts/: planner_prompt.txt
scripts/: build_social_preview.py  demo_terminal.sh  prepare_demo.sh  record_demo.sh  render_demo_video.sh  run_pick_and_place_ros2.sh  run_planner_experiments.sh
site/: 404.html  app.js  index.html  robots.txt  sitemap.xml  styles.css
skills/: pick_and_place.yaml  recover_grasp.yaml  recover_observation.yaml  wave_arm.yaml
src/: lib.rs
(+63 files in other folders)
